--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,9 @@
-name: Professional Port-Specific Collector
+name: Ghazwan Pro-Collector
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
-  workflow_dispatch:
+    - cron: '0 */4 * * *' # يتحدث آلياً كل 4 ساعات ليضمن لك سيرفرات طازجة
+  workflow_dispatch: # زر التشغيل اليدوي
 
 jobs:
   build:
@@ -12,33 +12,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Fetch, Decode and Filter
+      - name: Global Server Harvest
         run: |
-          # إنشاء ترويسة الملف
+          # ترويسة الملف المهنية
           echo "# Professional Server List - Ports 443 & 80 Only" > mysubs.txt
-          echo "# Project: Baby House - Optimized by Ghazwan Al-Jarjari" >> mysubs.txt
+          echo "# Project: Baby House - Optimized by Ghazwan Al-Jarjari Factory" >> mysubs.txt
           
-          # جلب البيانات وفك تشفيرها (Base64) ثم البحث عن المنافذ
-          sources=(
-            "https://shz.al/~WangCai"
-            "https://b2n.ir/v2ray-configs"
-            "https://raw.githubusercontent.com/yebekhe/vpn-fail/main/sub-link"
-            "https://raw.githubusercontent.com/MatinGhanbari/v2ray-configs/main/subscriptions/v2ray/super-sub.txt"
-          )
+          # تجميع من أقوى المصادر العالمية المباشرة (Plain Text)
+          touch raw_data.txt
+          curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt" >> raw_data.txt
+          curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw_data.txt
+          curl -sL "https://raw.githubusercontent.com/MatinGhanbari/v2ray-config/main/all.txt" >> raw_data.txt
+          
+          # فلترة المنافذ 443 و 80 وتنظيف الروابط
+          # نستخدم grep للبحث عن المنافذ ثم sort -u لحذف التكرار
+          grep -E ":443|:80" raw_data.txt | grep -v "Your_Subscription" | sort -u >> mysubs.txt
 
-          for url in "${sources[@]}"; do
-            # جلب المحتوى وفك التشفير إذا كان Base64، ثم البحث عن المنافذ المطلوبة
-            curl -sL "$url" | base64 -d 2>/dev/null | grep -E ":443|:80" >> mysubs.txt || \
-            curl -sL "$url" | grep -E ":443|:80" >> mysubs.txt
-          done
-
-          # تنظيف الملف من التكرار
-          sort -u mysubs.txt -o mysubs.txt
-          echo "# Updated by Ghazwan Al-Jarjari Factory" >> mysubs.txt
+          # إضافة التوقيع الختامي
+          echo "# Total Servers Collected: $(wc -l < mysubs.txt)" >> mysubs.txt
+          echo "# End of Auto-Update" >> mysubs.txt
 
       - name: Commit and Push
         run: |
           git config --global user.name "Ghazwan-Designer"
           git config --global user.email "ghazwan@example.com"
           git add mysubs.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Advanced Port-Filtered Sync" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Global Professional Sync" && git push)
