--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,8 @@ name: Ghazwan Pro-Collector
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # يتحدث آلياً كل 4 ساعات ليضمن لك سيرفرات طازجة
-  workflow_dispatch: # زر التشغيل اليدوي
+    - cron: '0 */4 * * *'
+  workflow_dispatch: 
 
 jobs:
   build:
@@ -12,29 +12,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Global Server Harvest
+      - name: Global Harvest - No SS - Branding
         run: |
-          # ترويسة الملف المهنية
+          # ترويسة الملف
           echo "# Professional Server List - Ports 443 & 80 Only" > mysubs.txt
-          echo "# Project: Baby House - Optimized by Ghazwan Al-Jarjari Factory" >> mysubs.txt
+          echo "# Filter: No SS Configs - Project: Baby House" >> mysubs.txt
           
-          # تجميع من أقوى المصادر العالمية المباشرة (Plain Text)
+          # تجميع من المصادر العالمية
           touch raw_data.txt
           curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt" >> raw_data.txt
           curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw_data.txt
           curl -sL "https://raw.githubusercontent.com/MatinGhanbari/v2ray-config/main/all.txt" >> raw_data.txt
           
-          # فلترة المنافذ 443 و 80 وتنظيف الروابط
-          # نستخدم grep للبحث عن المنافذ ثم sort -u لحذف التكرار
-          grep -E ":443|:80" raw_data.txt | grep -v "Your_Subscription" | sort -u >> mysubs.txt
+          # الفلترة الذكية:
+          # 1. اختيار المنافذ 443 و 80
+          # 2. حذف أي رابط يبدأ بـ ss:// (عبر أمر grep -v)
+          # 3. وضع بصمة "Ghazwan-Pro"
+          grep -E ":443|:80" raw_data.txt | grep -v "^ss://" | sed 's/#.*/#Ghazwan-Pro-Server/' | sort -u >> mysubs.txt
 
-          # إضافة التوقيع الختامي
-          echo "# Total Servers Collected: $(wc -l < mysubs.txt)" >> mysubs.txt
-          echo "# End of Auto-Update" >> mysubs.txt
+          echo "# Total Verified Servers: $(wc -l < mysubs.txt)" >> mysubs.txt
 
       - name: Commit and Push
         run: |
           git config --global user.name "Ghazwan-Designer"
           git config --global user.email "ghazwan@example.com"
           git add mysubs.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Global Professional Sync" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Clean Sync - No SS Protocols" && git push)
