--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,17 +21,17 @@ jobs:
           echo "# UPDATE: $TIMESTAMP (BAGHDAD)" >> mysubs.txt
           echo "###############################################" >> mysubs.txt
           
-          # 2. جمع السيرفرات من المصادر (تمت إضافة الرابط الجديد أدناه)
+          # 2. جمع السيرفرات من المصادر (بما فيها WangCai)
           touch raw_data.txt
           curl -sL "https://shz.al/~WangCai" >> raw_data.txt
           curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt" >> raw_data.txt
           curl -sL "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt" >> raw_data.txt
-          curl -sL "https://raw.githubusercontent.com/barry-far/V2ray-Config/refs/heads/main/Sub1.txt" >> raw_data.txt
           
           # 3. تنظيف البيانات (إبقاء المنافذ 443/80 وحذف SS)
           grep -E ":443|:80" raw_data.txt | grep -v "^ss://" | sort -u > clean_data.txt
 
           # 4. العملية المزدوجة: تغيير العنوان (Address) + تغيير الاسم إلى Ghazwan_pro
+          # سنقوم بمسح كل شيء بعد علامة # ونكتب اسمك مكانه
           
           # Viberout-lp.viber.com
           sed -E 's/@[^:]+:/@Viberout-lp.viber.com:/g' clean_data.txt | head -n 300 | sed 's/#.*/#Ghazwan_pro/' >> mysubs.txt
