--- a/.github/workflows/fresh.yml
+++ b/.github/workflows/fresh.yml
@@ -14,44 +14,47 @@ jobs:
 
       - name: Fetch and Process New Data
         run: |
-          # 1. إعداد التوقيت والترويسة للملف الجديد
+          # 1. إعداد التوقيت والترويسة
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
           echo "# NEW SOURCE PROJECT: PORT 443/80" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP (BAGHDAD)" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
-          # 2. جمع السيرفرات من المصادر الجديدة كلياً
+          # 2. جمع السيرفرات من قائمة مصادر موسعة ومضمونة
           touch raw_data_new.txt
           urls=(
+            "https://raw.githubusercontent.com/barry-far/V2ray-Config/refs/heads/main/Sub1.txt"
+            "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt"
             "https://raw.githubusercontent.com/w1770946466/Auto_Proxy/main/Long_term_subscription_num"
+            "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
             "https://raw.githubusercontent.com/LonUp/V2Ray-Config/main/All_Configs_Sub.txt"
-            "https://raw.githubusercontent.com/Epodonios/v2ray-configs/main/v2ray-configs.txt"
-            "https://raw.githubusercontent.com/V2RAY-FREE/FREE_V2RAY/main/V2RAY_FREE.txt"
-            "https://raw.githubusercontent.com/Zizifn/free-v2ray-config/main/v2ray"
-            "https://raw.githubusercontent.com/mfenet/v2ray-free/main/v2ray"
+            "https://raw.githubusercontent.com/mzy9/Scraper/main/outputs/all.txt"
+            "https://shz.al/~WangCai"
           )
 
           for url in "${urls[@]}"; do
             curl -sL "$url" >> raw_data_new.txt
           done
           
-          # 3. الفلترة والتنظيف (443 و 80 فقط)
-          grep -E ":443|:80" raw_data_new.txt | grep -Ev "^ss://" | sort -u > clean_data_new.txt
+          # 3. الفلترة: إبقاء أي سيرفر يحتوي على 443 أو 80
+          # قمنا بتخفيف القيود قليلاً لضمان جلب البيانات
+          grep -iE ":443|:80" raw_data_new.txt | sort -u > clean_data_new.txt
 
-          # 4. توزيع مباشر على الهوستات الأربعة
+          # 4. توزيع السيرفرات على الهوستات الأربعة
+          # إذا كان الملف فارغاً، لن يضيف شيئاً، لذا تأكدنا من جلب البيانات فوق
           
           # Viberout-lp.viber.com
-          sed -E 's/@[^:]+:/@Viberout-lp.viber.com:/g' clean_data_new.txt | sed -n '1,200p' >> mysubs_new.txt
+          sed -E 's/@[^:]+:/@Viberout-lp.viber.com:/g' clean_data_new.txt | sed -n '1,300p' >> mysubs_new.txt
           
           # lp.viber.com
-          sed -E 's/@[^:]+:/@lp.viber.com:/g' clean_data_new.txt | sed -n '201,400p' >> mysubs_new.txt
+          sed -E 's/@[^:]+:/@lp.viber.com:/g' clean_data_new.txt | sed -n '301,600p' >> mysubs_new.txt
           
           # braze-images.com
-          sed -E 's/@[^:]+:/@braze-images.com:/g' clean_data_new.txt | sed -n '401,600p' >> mysubs_new.txt
+          sed -E 's/@[^:]+:/@braze-images.com:/g' clean_data_new.txt | sed -n '601,900p' >> mysubs_new.txt
           
           # cdn.braze.com
-          sed -E 's/@[^:]+:/@cdn.braze.com:/g' clean_data_new.txt | sed -n '601,800p' >> mysubs_new.txt
+          sed -E 's/@[^:]+:/@cdn.braze.com:/g' clean_data_new.txt | sed -n '901,1200p' >> mysubs_new.txt
 
       - name: Push to Master
         run: |
