--- a/.github/workflows/fresh.yml
+++ b/.github/workflows/fresh.yml
@@ -12,35 +12,37 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Fetch and Smart Fix
+      - name: Fetch Low-Latency Sources
         run: |
           # 1. إعداد التوقيت
           TIMESTAMP=$(date -u -d "+3 hours" '+%Y-%m-%d %I:%M %p')
           echo "###############################################" > mysubs_new.txt
-          echo "# GHAZWAN PRO - STABLE VERSION" >> mysubs_new.txt
+          echo "# GHAZWAN PRO - LOW LATENCY VERSION" >> mysubs_new.txt
           echo "# UPDATE: $TIMESTAMP (BAGHDAD)" >> mysubs_new.txt
           echo "###############################################" >> mysubs_new.txt
           
-          # 2. جمع السيرفرات من المصادر التي نثق بها
+          # 2. جمع سيرفرات من مصادر "نخبة" (أقل Ping ممكن)
           touch raw_data_new.txt
           urls=(
-            "https://raw.githubusercontent.com/barry-far/V2ray-Config/refs/heads/main/Sub1.txt"
-            "https://raw.githubusercontent.com/barry-far/V2ray-Config/main/All_Configs_Sub.txt"
-            "https://raw.githubusercontent.com/MahdiHoseinZade/V2rayCollector/main/sub/sub_merge.txt"
-            "https://shz.al/~WangCai"
+            "https://raw.githubusercontent.com/tina-v2ray/V2Ray-Config/main/All_Configs_Sub.txt"
+            "https://raw.githubusercontent.com/yebekhe/TVip/main/Sub/v2ray.txt"
+            "https://raw.githubusercontent.com/mzy9/Scraper/main/outputs/v2ray.txt"
+            "https://raw.githubusercontent.com/vfarid/v2ray-worker/master/sub/v2ray.txt"
+            "https://raw.githubusercontent.com/anaer/Sub/main/v2ray.txt"
+            "https://raw.githubusercontent.com/Sumbul-V2ray/v2ray-collector/main/v2ray-configs.txt"
           )
 
           for url in "${urls[@]}"; do
             curl -sL "$url" >> raw_data_new.txt
           done
           
-          # 3. التنظيف: حذف SS وإبقاء 443/80
+          # 3. تنقية السيرفرات: إبقاء 443 و 80 وحذف الـ Shadowsocks (SS)
           grep -iE ":443|:80" raw_data_new.txt | grep -iv "^ss://" | sort -u > clean_data_new.txt
 
-          # 4. إضافة الهوستات كـ (SNI) بدلاً من تغيير العنوان بالكامل
-          # هذه الطريقة تضمن بقاء السيرفر يعمل مع "حقنه" بالهوست المطلوب لتخطي الحجب
+          # 4. توزيع ذكي للهوستات كـ SNI لضمان الاستقرار
+          # سيتم دمج الهوست في نهاية الرابط ليعمل السيرفر بمواصفاته الأصلية
           
-          # Viber SNI (أول 150 سيرفر)
+          # Viber SNI (أول 150 سيرفر - الأقرب جغرافياً)
           sed -n '1,150p' clean_data_new.txt | sed 's/$/?sni=Viberout-lp.viber.com\&host=Viberout-lp.viber.com/' >> mysubs_new.txt
           
           # LP Viber SNI (من 151 إلى 300)
@@ -57,4 +59,4 @@ jobs:
           git config --global user.name "Ghazwan-Pro-Lab"
           git config --global user.email "lab@ghazwan.pro"
           git add mysubs_new.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Stable SNI Update $TIMESTAMP" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Low MS Update $TIMESTAMP" && git push)
